fixing edge overflow?

--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,8 @@
   height: 100vh;
   background-image: linear-gradient(rgb(109,247,255), rgb(0,197,205) );
   margin-top: 47px;
-  width: 100%;
+  width: 100vw;
+  padding: 20px;
  }
 
  .andale {
@@ -95,6 +96,7 @@
   justify-content: center;
   background-image: linear-gradient(#729efd, rgb(111,101,189));
   width: 100vw;
+  padding: 20px;
 }
 
 .left-side-item1 {
@@ -129,6 +131,8 @@
   justify-content: center;
   background-image: linear-gradient(rgb(111,101,189), rgb(89,70,178));
   width: 100vw;
+  padding: 20px;
+
 }
 
 .left-side-item2 {
@@ -163,6 +167,8 @@
   justify-content: center;
   background-image: linear-gradient(rgb(89,70,178), rgb(51,51,161));
   width: 100vw;
+  padding: 20px;
+
 
 }
 
@@ -414,8 +420,8 @@ div .dot {
   align-items: center;
   height: 100vh;
   width: 100vw;
+  padding: 20px;
   background-image: linear-gradient(rgb(0,197,205), #729efd );
-  z-index: 2;
 }
 
 .about-content {
